cmake_minimum_required(VERSION 3.10)
project(fsl)

# Include subdirectories
#add_subdirectory(modules/mavis)
add_subdirectory(fsl_interp)
#add_subdirectory(fsl_api)
#add_subdirectory(test)
#add_subdirectory(docs)
#
## Set common variables
#set(DOXY doxygen)
#set(BOOST_INC "")
#set(BOOST_LIB "-lboost_program_options")
#
